--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Перфораторы</title>
   <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/styles-mini.css" rel="stylesheet">
+  <link href="css/style-min.css" rel="stylesheet">
 </head>
 <body class="page-body">
   <header class="main-header">
@@ -14,7 +14,7 @@
         <h2 class="visually-hidden">Панель пользователя</h2>
         <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
           <label  class="search-field">
-            <input class="input-background" type="search" name="search" aria-label="search" value="Поиск:">
+            <input class="input-background" type="search" name="search" aria-label="search" placeholder="Поиск:">
             <svg class="icon-search" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17"><path fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/></svg>
           </label>
         </form>
@@ -133,11 +133,11 @@
                 <legend>Питание:</legend>
                 <ul class="ul-style list-manufacturers fieldset-power-list">
                   <li>
-                    <input class="input-background visually-hidden" id ="accum" type="radio" name="power_accum" value="rechargeable" checked>
+                    <input class="input-background visually-hidden" id ="accum" type="radio" name="power" value="rechargeable" checked>
                     <label class="label-radio" for="accum">Аккумуляторные</label>
                   </li>
                   <li>
-                    <input class="input-background visually-hidden" id ="not-accum" type="radio" name="power_supply" value="mains_power">
+                    <input class="input-background visually-hidden" id ="not-accum" type="radio" name="power" value="mains_power">
                     <label class="label-radio" for="not-accum">Сетевые</label>
                   </li>
                 </ul>
@@ -148,9 +148,9 @@
         <section class="sorting">
           <h2>Сортировка:</h2>
           <div class="wrap-sorting">
-            <a href="#" class="sortinf-price sortinf-price-active" aria-label="Сортировка по цене">По цене</a>
-            <a href="#" class="sorting-type" aria-label="Сортировка по типу">По типу</a>
-            <a href="#" class="sortinf-function" aria-label="Сортировка по функционалу">По функционалу</a>
+            <a class="sortinf-price sortinf-price-active" href="#" aria-label="Сортировка по цене">По цене</a>
+            <a class="sorting-type" href="#" aria-label="Сортировка по типу">По типу</a>
+            <a class="sortinf-function" href="#" aria-label="Сортировка по функционалу">По функционалу</a>
             <button class="sorting-button-up" type="button" aria-label="Кнопка сортировки вверх">
               <svg class="sorting-icon sorting-icon-active" xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
                 <path fill="#231F20" d="M5.5 10L0 0h11"/>
@@ -171,12 +171,12 @@
                 <img src="img/bosch_6000.jpg" width="144" height="128" alt="фото инструмента">
               </div>
               <div class="buy-popup">
-                <button class="button-buy" aria-label="Кнопка покупки товара">Купить</button>
+                <a class="button-buy" href="buys.html" aria-label="Кнопка покупки товара">Купить</a>
                 <button class="to-bookmarks" aria-label="Кнопка помещения товара в закладку">В закладки</button>
               </div>
               <div class="wrap-p-price">
                 <p class="old-price">30500 Р.</p>
-                <a href="#" class="new-price">25500 Р.</a>
+                <a class="new-price" href="#">25500 Р.</a>
               </div>
             </article>
             <article class="product-cards-block">
@@ -185,12 +185,12 @@
                 <img src="img/bosch_6000.jpg" width="144" height="128" alt="фото инструмента">
               </div>
               <div class="buy-popup">
-                <button class="button-buy" aria-label="Кнопка покупки товара">Купить</button>
+                <a class="button-buy" href="buys.html" aria-label="Кнопка покупки товара">Купить</a>
                 <button class="to-bookmarks" aria-label="Кнопка помещения товара в закладку">В закладки</button>
               </div>
               <div class="wrap-p-price">
                 <p class="old-price">30500 Р.</p>
-                <a href="#" class="new-price">25500 Р.</a>
+                <a class="new-price" href="#">25500 Р.</a>
               </div>
             </article>
             <article class="new-mark product-cards-block">
@@ -199,12 +199,12 @@
                 <img src="img/bosch_6000.jpg" width="144" height="128" alt="фото инструмента">
               </div>
               <div class="buy-popup">
-                <button class="button-buy" aria-label="Кнопка покупки товара">Купить</button>
+                <a class="button-buy" href="buys.html" aria-label="Кнопка покупки товара">Купить</a>
                 <button class="to-bookmarks" aria-label="Кнопка помещения товара в закладку">В закладки</button>
               </div>
               <div class="wrap-p-price">
                 <p class="old-price">30500 Р.</p>
-                <a href="#" class="new-price">25500 Р.</a>
+                <a class="new-price" href="#">25500 Р.</a>
               </div>
             </article>
             <article class="new-mark product-cards-block">
@@ -213,12 +213,12 @@
                 <img src="img/bosch_3000.jpg" width="127" height="112" alt="фото инструмента">
               </div>
               <div class="buy-popup">
-                <button class="button-buy" aria-label="Кнопка покупки товара">Купить</button>
+                <a class="button-buy" href="buys.html" aria-label="Кнопка покупки товара">Купить</a>
                 <button class="to-bookmarks" aria-label="Кнопка помещения товара в закладку">В закладки</button>
               </div>
               <div class="wrap-p-price">
                 <p class="old-price">22500 Р.</p>
-                <a href="#" class="new-price">15500 Р.</a>
+                <a class="new-price" href="#">15500 Р.</a>
               </div>
             </article>
             <article class="product-cards-block">
@@ -227,12 +227,12 @@
                 <img src="img/bosch_6000.jpg" width="144" height="128" alt="фото инструмента">
               </div>
               <div class="buy-popup">
-                <button class="button-buy" aria-label="Кнопка покупки товара">Купить</button>
+                <a class="button-buy" href="buys.html" aria-label="Кнопка покупки товара">Купить</a>
                 <button class="to-bookmarks" aria-label="Кнопка помещения товара в закладку">В закладки</button>
               </div>
               <div class="wrap-p-price">
                 <p class="old-price">30500 Р.</p>
-                <a href="#" class="new-price">25500 Р.</a>
+                <a class="new-price" href="#">25500 Р.</a>
               </div>
             </article>
             <article class="new-mark product-cards-block">
@@ -241,12 +241,12 @@
                 <img src="img/bosch_2000.jpg" width="127" height="112" alt="фото инструмента">
               </div>
               <div class="buy-popup">
-                <button class="button-buy" aria-label="Кнопка покупки товара">Купить</button>
+                <a class="button-buy" href="buys.html" aria-label="Кнопка покупки товара">Купить</a>
                 <button class="to-bookmarks" aria-label="Кнопка помещения товара в закладку">В закладки</button>
               </div>
               <div class="wrap-p-price">
                 <p class="old-price">30500 Р.</p>
-                <a href="#" class="new-price">12500 Р.</a>
+                <a class="new-price" href="#">12500 Р.</a>
               </div>
             </article>
             <article class="new-mark product-cards-block">
@@ -255,12 +255,12 @@
                 <img src="img/bosch_3000.jpg" width="127" height="112" alt="фото инструмента">
               </div>
               <div class="buy-popup">
-                <button class="button-buy" aria-label="Кнопка покупки товара">Купить</button>
+                <a class="button-buy" href="buys.html" aria-label="Кнопка покупки товара">Купить</a>
                 <button class="to-bookmarks" aria-label="Кнопка помещения товара в закладку">В закладки</button>
               </div>
               <div class="wrap-p-price">
                 <p class="old-price">22500 Р.</p>
-                <a href="#" class="new-price">15500 Р.</a>
+                <a class="new-price" href="#">15500 Р.</a>
               </div>
             </article>
             <article class="product-cards-block">
@@ -269,12 +269,12 @@
                 <img src="img/bosch_6000.jpg" width="144" height="128" alt="фото инструмента">
               </div>
               <div class="buy-popup">
-                <button class="button-buy" aria-label="Кнопка покупки товара">Купить</button>
+                <a class="button-buy" href="buys.html" aria-label="Кнопка покупки товара">Купить</a>
                 <button class="to-bookmarks" aria-label="Кнопка помещения товара в закладку">В закладки</button>
               </div>
               <div class="wrap-p-price">
                 <p class="old-price">30500 Р.</p>
-                <a href="#" class="new-price">25500 Р.</a>
+                <a class="new-price" href="#">25500 Р.</a>
               </div>
             </article>
             <article class="new-mark product-cards-block">
@@ -283,12 +283,12 @@
                 <img src="img/bosch_2000.jpg" width="127" height="112" alt="фото инструмента">
               </div>
               <div class="buy-popup">
-                <button class="button-buy" aria-label="Кнопка покупки товара">Купить</button>
+                <a class="button-buy" href="buys.html" aria-label="Кнопка покупки товара">Купить</a>
                 <button class="to-bookmarks" aria-label="Кнопка помещения товара в закладку">В закладки</button>
               </div>
               <div class="wrap-p-price">
                 <p class="old-price">30500 Р.</p>
-                <a href="#" class="new-price">12500 Р.</a>
+                <a class="new-price" href="#">12500 Р.</a>
               </div>
             </article>
         </section>
@@ -315,7 +315,7 @@
   <footer class="footer">
     <div class="footer-wrapper-main">
       <div class="wrap-main-nav container">
-        <a href="index.html" class="logo-footer"><img src="img/logo_footer.svg" width="138" height="23" alt="Логотип магазина">
+        <a class="logo-footer" href="index.html"><img src="img/logo_footer.svg" width="138" height="23" alt="Логотип магазина">
         </a>
         <section>
           <h2 class="visually-hidden">Навигация по страницам сайта</h2>  
@@ -357,7 +357,7 @@
       </section>
     </div>
   </footer>
-  <section class="store-basket hide">
+  <section class="modal store-basket hide">
     <div class="wrap-store-basket">
       <h2 class="visually-hidden">Корзина</h2>
       <p>Товар добавлен в корзину!</p>
@@ -368,6 +368,6 @@
       <button class="order-close" type="button" aria-label="Закрыть окно корзины"></button>
     </div>
   </section>
-  <script src="js/catalog-mini.js"></script>
+  <script src="js/catalog-min.js"></script>
 </body>
 </html>
