--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/styles-mini.css" rel="stylesheet">
+    <link href="css/style-min.css" rel="stylesheet">
   </head>
   <body class="page-body">
     <header class="main-header">
@@ -14,7 +14,7 @@
           <h2 class="visually-hidden">Панель пользователя</h2>
           <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
             <label  class="search-field">
-              <input class="input-background" type="search" name="search" aria-label="search" value="Поиск:">
+              <input class="input-background" type="search" name="search" aria-label="search" placeholder="Поиск:">
               <svg class="icon-search" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17"><path fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/></svg>
             </label>
           </form>
@@ -105,10 +105,8 @@
           </div>
           <a class="open-catalog-slider" href="catalog.html">Открыть каталог</a>
           <div class="wrap-slider-radio">
-            <input class="visually-hidden" id="slider-radio-r1" type="radio" name="slider-1">
-            <label class="slider-radio-1" for="slider-radio-r1"></label>
-            <input class="visually-hidden" id="slider-radio-r2" type="radio" name="slider-2" checked>
-            <label class="slider-radio-2" for="slider-radio-r2"></label>
+            <button class="slider-radio-1" type="button"></button>
+            <button class="slider-radio-2 slider-radio-active" type="button"></button>
           </div>
         </article>
         <article class="drills-cards hide">
@@ -122,12 +120,8 @@
           </div>
           <a class="open-catalog-slider" href="catalog.html">Открыть каталог</a>
           <div class="wrap-slider-radio">
-            <form action="#">
-              <input class="visually-hidden" id="slider-radio-d1" type="radio" name="slider-1" checked>
-              <label class="slider-radio-1" for="slider-radio-d1"></label>
-              <input class="visually-hidden" id="slider-radio-d2" type="radio" name="slider-2">
-              <label class="slider-radio-2" for="slider-radio-d2"></label>
-          </form>
+            <button class="slider-radio-1" type="button"></button>
+            <button class="slider-radio-2" type="button"></button>
           </div>
         </article>
       </section>
@@ -143,12 +137,12 @@
               <img src="img/bosch_9000.jpg" width="184" height="164" alt="Фото инструмента - Перфоратор Bosch bfg 9000">
             </div>
             <div class="buy-popup">
-              <button class="button-buy" aria-label="Кнопка покупки товара">Купить</button>
+              <a class="button-buy" href="buys.html" aria-label="Кнопка покупки товара">Купить</a>
               <button class="to-bookmarks" aria-label="Кнопка помещения товара в закладку">В закладки</button>
             </div>
             <div class="wrap-p-price">
               <p class="old-price">32500 Р.</p>
-              <a href="#" class="new-price">25500 Р.</a>
+              <a class="new-price" href="#">25500 Р.</a>
             </div>
           </article>
           <article class="new-mark product-cards-block">
@@ -157,12 +151,12 @@
               <img src="img/bosch_3000.jpg" width="127" height="112" alt="Фото инструмента - Перфоратор Bosch bfg 3000">
             </div>
             <div class="buy-popup">
-              <button class="button-buy" aria-label="Кнопка покупки товара">Купить</button>
+              <a class="button-buy" href="buys.html" aria-label="Кнопка покупки товара">Купить</a>
               <button class="to-bookmarks" aria-label="Кнопка помещения товара в закладку">В закладки</button>
             </div>
             <div class="wrap-p-price">
               <p class="old-price">22500 Р.</p>
-              <a href="#" class="new-price">15500 Р.</a>
+              <a class="new-price" href="#">15500 Р.</a>
             </div>
           </article>
           <article class="product-cards-block">
@@ -171,12 +165,12 @@
               <img src="img/bosch_6000.jpg" width="144" height="128" alt="Фото инструмента - Перфоратор Bosch bfg 6000">
             </div>
             <div class="buy-popup">
-              <button class="button-buy" aria-label="Кнопка покупки товара">Купить</button>
+              <a class="button-buy" href="buys.html" aria-label="Кнопка покупки товара">Купить</a>
               <button class="to-bookmarks" aria-label="Кнопка помещения товара в закладку">В закладки</button>
             </div>
             <div class="wrap-p-price">
               <p class="old-price">30500 Р.</p>
-              <a href="#" class="new-price">25500 Р.</a>
+              <a class="new-price" href="#">25500 Р.</a>
             </div>
           </article>
           <article class="new-mark product-cards-block">
@@ -185,12 +179,12 @@
               <img src="img/bosch_2000.jpg" width="127" height="112" alt="Фото инструмента - Перфоратор Bosch bfg 2000">
             </div>
             <div class="buy-popup">
-              <button class="button-buy" aria-label="Кнопка покупки товара">Купить</button>
+              <a class="button-buy" href="buys.html" aria-label="Кнопка покупки товара">Купить</a>
               <button class="to-bookmarks" aria-label="Кнопка помещения товара в закладку">В закладки</button>
             </div>
             <div class="wrap-p-price wrap-without-old-price">
               <p></p>
-              <a href="#" class="new-price">12500 Р.</a>
+              <a class="new-price" href="#">12500 Р.</a>
             </div>
           </article>
         </div>
@@ -305,14 +299,14 @@
             заехав в наш офис:
           </p>
           <a class="map-contacts" href="map.html"><img src="img/map.jpg" width="300" height="158" alt="Изображение магазина на карте города"></a>
-          <a href="popup.html" class="feed-back-button" type="button" aria-label="Кнопка обратной формы" >Заблудились? Напишите нам!</a> 
+          <a class="feed-back-button" href="writeus.html" aria-label="Кнопка обратной формы" >Заблудились? Напишите нам!</a> 
         </section>
       </div>
     </main>
     <footer class="footer">
       <div class="footer-wrapper-main">
         <div class="wrap-main-nav container">
-          <a href="#" class="logo-footer"><img src="img/logo_footer.svg" width="138" height="23" alt="Логотип магазина">
+          <a class="logo-footer" href="#"><img src="img/logo_footer.svg" width="138" height="23" alt="Логотип магазина">
           </a>
           <section>
             <h2 class="visually-hidden">Навигация по страницам сайта</h2>  
@@ -354,7 +348,7 @@
         </section>
       </div>
     </footer>
-    <section class="feedback-popup hide">
+    <section class="modal feedback-popup hide">
       <div class="wrap-feedback-popup">
         <h2 class="visually-hidden">Напишите нам</h2>
         <form action="https://echo.htmlacademy.ru" method="post">
@@ -377,7 +371,7 @@
         <button class="feed-back-close" type="button" aria-label="Закрыть окно обратной связи"></button>
       </div>
     </section>
-    <section class="map-widget hide">
+    <section class="modal map-widget hide">
       <div class="wrap-feedback-popup">
         <h2 class="visually-hidden">Виджет карты города</h2>
         <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A12307483c981de1bff2ca94339040183ba5f9de282b3f0b2ccdae7b0bd9d4814&amp;source=constructor" width="943" height="449"
@@ -387,7 +381,7 @@
         <button class="map-close" type="button" aria-label="Закрыть окна карты"></button>
       </div>
     </section>
-    <section class="store-basket hide">
+    <section class="modal store-basket hide">
       <div class="wrap-store-basket">
         <h2 class="visually-hidden">Корзина</h2>
         <p>Товар добавлен в корзину!</p>
@@ -398,6 +392,6 @@
         <button class="order-close" type="button" aria-label="Закрыть окно корзины"></button>
       </div>
     </section>
-    <script src="js/index-mini.js"></script>
+    <script src="js/index-min.js"></script>
   </body>
 </html>
